# CreateSlide

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  README_VI.md  ai_engine.py  diagnose_models.py  docker-compose.yml  main.py  mkdocs.yml  pyproject.toml  reproduce_slide_render.py  requirements.txt  slide_engine.py  summarizer.py  test_deletion.py  test_json_cleaning.py  utils.py  verify_content_extraction.py  verify_font_scaling.py  verify_highlighting.py  verify_layout.py
.github/workflows/: ci.yml
app/: __init__.py  config.py
app/core/: __init__.py  cancellation.py  executor.py  json_parser.py  log.py
app/prompts/: __init__.py  review.py  slide.py  summary.py
app/providers/: __init__.py  anthropic_provider.py  base.py  gemini.py  litellm_provider.py  ollama.py  openai_provider.py  registry.py
app/rendering/: __init__.py  pdf.py  pptx.py
app/services/: __init__.py  document.py  review.py  slide.py  summary.py
app/ui/: __init__.py  handlers.py  page.py  state.py
docs/: index.md
docs/api/: config.md  core.md  providers.md  rendering.md  services.md
docs/architecture/: overview.md  providers.md  services.md
docs/development/: contributing.md  testing.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
tests/: conftest.py  test_anthropic.py  test_cancellation.py  test_config.py  test_document.py  test_executor.py  test_gemini.py  test_integration.py  test_json_parser.py  test_litellm.py  test_log.py  test_openai_provider.py  test_pdf.py  test_pptx.py  test_prompts.py  test_providers.py  test_review.py  test_slide_service.py  test_summary.py
